# cw2vec

./: README.md  run.sh
Simplified_Chinese_Feature/: sin_chinese_feature.txt
sample/: substoke_feature.txt  zhwiki.txt  zhwiki_char_1b.txt  zhwiki_word_remove_1b.txt
word2vec/: CMakeLists.txt  run.sh
word2vec/src/: CMakeLists.txt  main.cpp
word2vec/src/include/: Utf.h  alphabet.h  args.h  dictionary.h  fasttext.h  matrix.h  model.h  real.h  utils.h
